<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_LabelVklMain"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/НАЗВАНИЕГЛАВНАЯ"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name_Label1"
        android:layout_width="215dp"
        android:layout_height="83dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/НАЗВАНИЕ"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButRoom"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/biorhyme_bold"
        android:text="@string/КОМНАТА"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name_Label1" />

    <Button
        android:id="@+id/ButBalkon"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/biorhyme_bold"
        android:text="@string/БАЛКОН"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButRoom" />

    <Button
        android:id="@+id/ButDop"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/biorhyme_bold"
        android:text="@string/ДОП"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButBalkon" />

    <Button
        android:id="@+id/ButClose"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Выход"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ButConnect"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Коннект"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>