<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".Dop_Activity"
    tools:deviceIds="wear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_Label2"
            android:layout_width="215dp"
            android:layout_height="83dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/НАЗВАНИЕ"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_LabelVkl1"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/НАЗВАНИЕДОП"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/butDiskoH"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/biorhyme_bold"
            android:text="@string/ДИСКОH"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_Label2" />

        <Button
            android:id="@+id/butDiskoB"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/biorhyme_bold"
            android:text="@string/ДИСКОB"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/butDiskoH" />

        <Button
            android:id="@+id/butBackD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Назад"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>