<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".DiscoBall_Activity"
    tools:deviceIds="wear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_LabelVklDiscoBall"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/НАЗВАНИЕDISCOBALL"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_Label4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:text="@string/НАЗВАНИЕ"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/butBackDiskoB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Назад"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textDiscoBall1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/biorhyme_bold"
            android:text="@string/DiscoBall1"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_Label4" />

        <SeekBar
            android:id="@+id/seekDiskoBall1"
            style="@android:style/Widget.Holo.Light.SeekBar"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:max="5"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDiscoBall1" />

        <TextView
            android:id="@+id/textDiscoBall2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/biorhyme_bold"
            android:text="@string/DiscoBall2"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekDiskoBall1" />

        <SeekBar
            android:id="@+id/seekDiskoBall2"
            style="@android:style/Widget.Holo.Light.SeekBar"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:max="100"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDiscoBall2" />

        <TextView
            android:id="@+id/textDiscoBall3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/biorhyme_bold"
            android:text="@string/DiscoBall3"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekDiskoBall2" />

        <SeekBar
            android:id="@+id/seekDiskoBall3"
            style="@android:style/Widget.Holo.Light.SeekBar"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:max="255"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDiscoBall3" />

        <TextView
            android:id="@+id/textDiscoBall4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/biorhyme_bold"
            android:text="@string/DiscoBall4"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekDiskoBall3" />

        <SeekBar
            android:id="@+id/seekDiskoBall4"
            style="@android:style/Widget.Holo.Light.SeekBar"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:max="255"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDiscoBall4" />

        <TextView
            android:id="@+id/textDiscoBall5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/biorhyme_bold"
            android:text="@string/DiscoBall5"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekDiskoBall4" />

        <SeekBar
            android:id="@+id/seekDiskoBall5"
            style="@android:style/Widget.Holo.Light.SeekBar"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:max="255"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDiscoBall5" />

        <TextView
            android:id="@+id/textDiscoBall6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/biorhyme_bold"
            android:text="@string/DiscoBall6"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekDiskoBall5" />

        <SeekBar
            android:id="@+id/seekDiskoBall6"
            style="@android:style/Widget.Holo.Light.SeekBar"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:max="255"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDiscoBall6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>